--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -21,6 +21,8 @@
       <button v-on:click="add(10)">Add</button>
       <button v-on:click="remove(5)">Remove</button>
       <p>Result: {{ counter }}</p>
+      <input type="text" v-on:input="setName" />
+      <p>Your Name :{{name}}</p>
     </section>
   </body>
 </html>
