--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -19,10 +19,14 @@
     <section id="events">
       <h2>Events in Action</h2>
       <button v-on:click="add(10)">Add</button>
-      <button v-on:click="remove(5)">Remove</button>
+      <!--우클릭지원하기 -->
+      <button v-on:click.right="remove(5)">Remove</button>
+      <p v-once>Starting Counter : {{counter}}</p>
       <p>Result: {{ counter }}</p>
       <input type="text" v-on:input="setName" />
       <p>Your Name :{{name}}</p>
+      <!--form 기본요청 막기 -->
+      <form v-on:submit.prevent="submitForm"></form>
     </section>
   </body>
 </html>
